hero section mobile + header position fix

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -55,6 +55,7 @@ nav > a.navbar__link:hover {
         display: block;
         width: 100%;
         height: auto;
+        position: unset;
     }
 
     header > nav {
